[master]
    - Breaking API change: String[] is replaced by List<String> in BibtexEntryType
    - Feature: Field names "Doi", "Ee", and "Url" are now written as "DOI", "EE", and "URL"
    - The default language is now automatically set to the system's locale.
    - Use correct encoding names (#155) and replace old encoding names in bibtex files. This changes the file header.
    - Feature: When pasting a Google search URL, meta data will be automatically stripped before insertion.
    - No longer write JabRef version to BibTex file header.
    - No longer add blank lines inside a bibtex entry
    - Perform syntax improvements enabled by Java 1.7+ (diamond operator, try-with-resources)
    - List of authors is now auto generated `scripts/generate-authors.sh` and inserted into L10N About.html
    - Remove Mr.DLib support as MR.DLib will be shut down in 2015
    - Streamline logging API: Replace usages of java.util.logging with commons.logging
    - BREAKING: Remove plugin functionality.
    - Fixes Bug#1297: No console message on closing.
    - Fix bug #1285: Editing position is not lost on saving
    - Remove support for custom icon themes. The user has to use the default one.
    - Bugfix: Tooltips are now shown for the #-field when the bibtex entry is incomplete.
    - Solved feature request #767: New subdatabase based on AUX file (biblatex)
[dev_2.11]
2.11 beta 4
    - Add of Persian localization (by Behrouz Javanmardi)
    - Backport from 2.80: Fixes #115: Remove whitespaces in serialization
    - Backport from 2.80: Fixes Bug#1297: No console message on closing.
    - Backport from 2.80: Fixes Bug#1290: Spanish localization was not displayed correctly.
	- Backport from 2.80: Fixes #144: Unreadable text in Russian installer
    - Fix for bugs #1221 and #1261 (also partly #1243): order of fields in customized entry types no longer gets destroyed by the entry editor 
    - "ISBN to BibTeX" fetcher now uses eBook.de's API (fixes bug #1241)